Add gnark-plonk message
