# docs/static/openapi.yml
@@ -40,6 +40,49 @@ paths:
                   additionalProperties: {}
       tags:
         - Query
+  /alignedlayer.verify.Msg/GnarkPlonk:
+    post:
+      operationId: AlignedlayerVerifyMsg_GnarkPlonk
+      responses:
+        '200':
+          description: A successful response.
+          schema:
+            type: object
+        default:
+          description: An unexpected error response.
+          schema:
+            type: object
+            properties:
+              code:
+                type: integer
+                format: int32
+              message:
+                type: string
+              details:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    '@type':
+                      type: string
+                  additionalProperties: {}
+      parameters:
+        - name: body
+          in: body
+          required: true
+          schema:
+            type: object
+            properties:
+              creator:
+                type: string
+              proof:
+                type: string
+              publicInputs:
+                type: string
+              verifyingKey:
+                type: string
+      tags:
+        - Msg
   /alignedlayer.verify.Msg/UpdateParams:
     post:
       summary: |-
@@ -88,10 +131,7 @@ paths:
                   authority is the address that controls the module (defaults to
                   x/gov unless overwritten).
               params:
-                description: |-
-                  params defines the module parameters to update.
-
-                  NOTE: All parameters must be supplied.
+                description: 'NOTE: All parameters must be supplied.'
                 type: object
             description: MsgUpdateParams is the Msg/UpdateParams request type.
       tags:
@@ -4068,6 +4108,19 @@ definitions:
         description: params holds all the parameters of this module.
         type: object
     description: QueryParamsResponse is response type for the Query/Params RPC method.
+  alignedlayer.verify.MsgGnarkPlonk:
+    type: object
+    properties:
+      creator:
+        type: string
+      proof:
+        type: string
+      publicInputs:
+        type: string
+      verifyingKey:
+        type: string
+  alignedlayer.verify.MsgGnarkPlonkResponse:
+    type: object
   alignedlayer.verify.MsgUpdateParams:
     type: object
     properties:
@@ -4077,10 +4130,7 @@ definitions:
           authority is the address that controls the module (defaults to x/gov
           unless overwritten).
       params:
-        description: |-
-          params defines the module parameters to update.
-
-          NOTE: All parameters must be supplied.
+        description: 'NOTE: All parameters must be supplied.'
         type: object
     description: MsgUpdateParams is the Msg/UpdateParams request type.
   alignedlayer.verify.MsgUpdateParamsResponse:
